Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -2083,7 +2083,7 @@ msgstr "Tüm satırları yığınla"
 
 #: libraries/display_export.lib.php:181 libraries/display_export.lib.php:202
 msgid "Output:"
-msgstr ""
+msgstr "Çıktı:"
 
 #: libraries/display_export.lib.php:188 libraries/display_export.lib.php:214
 #, fuzzy, php-format
