--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-22 12:51+0200\n"
+"PO-Revision-Date: 2010-08-22 12:52+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -2137,7 +2137,7 @@ msgstr ""
 
 #: libraries/display_export.lib.php:284
 msgid "use this for future exports"
-msgstr ""
+msgstr "ilerdeki dışa aktarımlar için bunu kullan"
 
 #: libraries/display_export.lib.php:290 libraries/display_import.lib.php:188
 #: libraries/display_import.lib.php:201 libraries/sql_query_form.lib.php:509
