--- a/po/tr.po
+++ b/po/tr.po
@@ -2989,7 +2989,7 @@ msgstr "yapı"
 #: libraries/export/odt.php:33 libraries/export/sql.php:79
 #: libraries/export/texytext.php:23
 msgid "data"
-msgstr ""
+msgstr "veri"
 
 #: libraries/export/htmlword.php:24 libraries/export/latex.php:41
 #: libraries/export/odt.php:33 libraries/export/sql.php:79
