Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -2062,10 +2062,9 @@ msgid "Rows:"
 msgstr "Satır"
 
 #: libraries/display_export.lib.php:157
-#, fuzzy
 #| msgid "Dump all rows"
 msgid "Dump some row(s)"
-msgstr "Tüm satırları yığınla"
+msgstr "Tüm satırı(ları) dökümle"
 
 #: libraries/display_export.lib.php:159
 #, fuzzy
