Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-22 13:52+0200\n"
+"PO-Revision-Date: 2010-08-22 13:54+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -3231,6 +3231,9 @@ msgid ""
 "&nbsp; &nbsp; Example: <code>INSERT INTO tbl_name (col_A,col_B,col_C) VALUES "
 "(1,2,3)</code>"
 msgstr ""
+"her <code>INSERT</code> ifadesine sütun adlarını dahil et <br /> &nbsp; "
+"&nbsp; &nbsp; Örneğin: <code>INSERT INTO tbl_adı (sütun_A,sütun_B,sütun_C) "
+"VALUES (1,2,3)</code>"
 
 #: libraries/export/sql.php:155
 msgid ""
