--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-22 13:58+0200\n"
+"PO-Revision-Date: 2010-08-22 13:59+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -3250,7 +3250,7 @@ msgid ""
 "both of the above<br /> &nbsp; &nbsp; &nbsp; Example: <code>INSERT INTO "
 "tbl_name (col_A,col_B) VALUES (1,2,3), (4,5,6), (7,8,9)</code>"
 msgstr ""
-"yukarıdakilerin ikisi birden<br /> &nbsp; &nbsp; &nbsp; Example: "
+"yukarıdakilerin ikisi birden<br /> &nbsp; &nbsp; &nbsp; Örneğin: "
 "<code>INSERT INTO tbl_adı (col_A,col_B) VALUES (1,2,3), (4,5,6), "
 "(7,8,9)</code>"
 
