--- a/po/tr.po
+++ b/po/tr.po
@@ -3242,7 +3242,7 @@ msgid ""
 "(7,8,9)</code>"
 msgstr ""
 "her <code>INSERT</code> ifadesine çoklu satırları ekle<br /> &nbsp; &nbsp; "
-"&nbsp; Örneğin: <code>INSERT INTO tbl_adı VALUES (1,2,3), (4,5,6), "
+"&nbsp; Örnek: <code>INSERT INTO tbl_adı VALUES (1,2,3), (4,5,6), "
 "(7,8,9)</code>"
 
 #: libraries/export/sql.php:156
