--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-22 19:16+0200\n"
+"PO-Revision-Date: 2010-08-22 19:21+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -3439,6 +3439,9 @@ msgid ""
 "database, list the corresponding column names here. Column names must be "
 "separated by commas and not enclosed in quotations."
 msgstr ""
+"Eğer dosyanın her bir satırındaki veri, veritabanındaki gibi aynı sırada "
+"değilse, burada uyan sütun adları listelenir. Sütun adları virgüllerle "
+"bölünmeli ve tırnaklarla kapanmamalıdır."
 
 #: libraries/import/csv.php:41
 #, fuzzy
