--- a/po/it.po
+++ b/po/it.po
@@ -4,15 +4,15 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-05-24 21:25+0200\n"
-"Last-Translator: Fabio <fantonifabio@tiscali.it>\n"
+"PO-Revision-Date: 2010-08-22 19:26+0200\n"
+"Last-Translator:  <rebeluca@gmail.com>\n"
 "Language-Team: italian <it@li.org>\n"
 "Language: it\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Pootle 2.0.1\n"
+"X-Generator: Pootle 2.0.5\n"
 
 #: browse_foreigners.php:36 browse_foreigners.php:57
 #: libraries/display_tbl.lib.php:415 server_privileges.php:1510
@@ -8891,159 +8891,3 @@ msgstr "Rinomina la tabella in"
 #, fuzzy
 #~ msgid "<code>AUTO_INCREMENT</code>"
 #~ msgstr "<code>, VARIABLE as myname</code>"
-
-#, fuzzy
-#~| msgid "Dump %s row(s) starting at record # %s"
-#~ msgid "Dump %s row(s) starting at row # %s"
-#~ msgstr "Dump di %s righe a partire dalla riga %s."
-
-#~ msgid "remember template"
-#~ msgstr "ricorda il template"
-
-#~ msgid "Imported file compression will be automatically detected from: %s"
-#~ msgstr ""
-#~ "Il tipo di compressione del file importato sarà automaticamente rilevato "
-#~ "da: %s"
-
-#~ msgid "Continued table caption"
-#~ msgstr "Sottotitolo della tabella continuato"
-
-#~ msgid "Database export options"
-#~ msgstr "Opzioni di esportazione del database"
-
-#, fuzzy
-#~| msgid "Enclose table and field names with backquotes"
-#~ msgid "Enclose table and column names with backquotes"
-#~ msgstr "Usa i backquotes con i nomi delle tabelle e dei campi"
-
-#~ msgid "Add into comments"
-#~ msgstr "Aggiungi nei commenti"
-
-#~ msgid "Creation/Update/Check dates"
-#~ msgstr "Creazione/Aggiornamento/Controllo date"
-
-#~ msgid "Complete inserts"
-#~ msgstr "Inserimenti completi"
-
-#~ msgid "Extended inserts"
-#~ msgstr "Inserimenti estesi"
-
-#~ msgid "Use delayed inserts"
-#~ msgstr "Utilizza inserimenti ritardati"
-
-#~ msgid "Use ignore inserts"
-#~ msgstr "Utilizza gli IGNORE INSERTS"
-
-#~ msgid "Use hexadecimal for BLOB"
-#~ msgstr "Usa dati esadecimali per BLOB"
-
-#~ msgid "Export time in UTC"
-#~ msgstr "Esporta ora in UTC"
-
-#~ msgid "Export functions"
-#~ msgstr "Funzioni di esportazione"
-
-#~ msgid "Export procedures"
-#~ msgstr "Esporta procedure"
-
-#~ msgid "Export tables"
-#~ msgstr "Esporta tabelle"
-
-#~ msgid "Export triggers"
-#~ msgstr "Esporta trigger"
-
-#~ msgid "Export views"
-#~ msgstr "Esporta visualizzazione"
-
-#~ msgid "Column names in first row"
-#~ msgstr "I nomi delle colonne in prima fila"
-
-#~ msgid "Invalid column (%s) specified!"
-#~ msgstr "Colonna specificata (%s) invalida!"
-
-#~ msgid "Actions"
-#~ msgstr "Azioni"
-
-#~ msgid "Interface"
-#~ msgstr "Interfacce"
-
-#~ msgid "Custom color"
-#~ msgstr "Colore definito dall'utente"
-
-#, fuzzy
-#~| msgid "Table name"
-#~ msgid "Table removal"
-#~ msgstr "Nome tabella"
-
-#~ msgid "BLOB Repository"
-#~ msgstr "Repository BLOB"
-
-#~ msgctxt "BLOB repository"
-#~ msgid "Enabled"
-#~ msgstr "Attivato"
-
-#~ msgid "Disable"
-#~ msgstr "Disabilita"
-
-#~ msgid "Damaged"
-#~ msgstr "Danneggiato"
-
-#~ msgctxt "BLOB repository"
-#~ msgid "Repair"
-#~ msgstr "Riparazione"
-
-#~ msgctxt "BLOB repository"
-#~ msgid "Disabled"
-#~ msgstr "Disabilitato"
-
-#~ msgid "Enable"
-#~ msgstr "Abilita"
-
-#~ msgid ""
-#~ "Cannot load [a@http://php.net/%1$s@Documentation][em]%1$s[/em][/a] "
-#~ "extension. Please check your PHP configuration."
-#~ msgstr ""
-#~ "Impossibile caricare l'estensione %s,<br />prego controllare la "
-#~ "configurazione di PHP"
-
-#~ msgid ""
-#~ "Couldn't load the iconv or recode extension needed for charset "
-#~ "conversion. Either configure PHP to enable these extensions or disable "
-#~ "charset conversion in phpMyAdmin."
-#~ msgstr ""
-#~ "Impossibile caricare l'estensione iconv o recode necessaria per la "
-#~ "conversione del set di caratteri, configurare il PHP per permettere di "
-#~ "utilizzare queste estenzioni o disabilitare la conversione dei set di "
-#~ "caratteri in phpMyAdmin."
-
-#~ msgid ""
-#~ "Couldn't use the iconv, libiconv, or recode_string functions, although "
-#~ "the necessary extensions appear to be loaded. Check your PHP "
-#~ "configuration."
-#~ msgstr ""
-#~ "Impossibile utilizzare le funzioni iconv o libiconv o recode_string in "
-#~ "quanto l'estensione deve essere caricata. Controllare la configurazione "
-#~ "del PHP."
-
-#, fuzzy
-#~| msgid "Add new field"
-#~ msgid "Add field"
-#~ msgstr "Aggiungi un nuovo campo"
-
-#~ msgid "Field"
-#~ msgstr "Campo"
-
-#~ msgid "Records"
-#~ msgstr "Record"
-
-#~ msgid "Fields terminated by"
-#~ msgstr "Campo terminato da"
-
-#~ msgid "Fields"
-#~ msgstr "Campi"
-
-#~ msgid "Field %s has been dropped"
-#~ msgstr "Il campo %s è stato eliminato"
-
-#~ msgid "See image/jpeg: inline"
-#~ msgstr "Vedi immagine/jpeg: inline"
