--- a/po/it.po
+++ b/po/it.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-22 19:30+0200\n"
+"PO-Revision-Date: 2010-08-22 19:31+0200\n"
 "Last-Translator:  <rebeluca@gmail.com>\n"
 "Language-Team: italian <it@li.org>\n"
 "Language: it\n"
@@ -2044,7 +2044,7 @@ msgstr ""
 #, fuzzy
 #| msgid "Allows locking tables for the current thread."
 msgid "Exporting databases in the current server"
-msgstr "Permette di bloccare le tabelle per il thread corrente."
+msgstr "Sto esportando i database dal server corrente"
 
 #: libraries/display_export.lib.php:89
 #, fuzzy, php-format
