--- a/po/it.po
+++ b/po/it.po
@@ -2047,10 +2047,10 @@ msgid "Exporting databases in the current server"
 msgstr "Sto esportando i database dal server corrente"
 
 #: libraries/display_export.lib.php:89
-#, fuzzy, php-format
+#, php-format
 #| msgid "Create table on database %s"
 msgid "Exporting tables in the database \"%s\""
-msgstr "Crea una nuova tabella nel database %s"
+msgstr "Sto esportando le tabelle nel database \"%s\""
 
 #: libraries/display_export.lib.php:91
 #, fuzzy, php-format
