--- a/po/it.po
+++ b/po/it.po
@@ -2053,10 +2053,10 @@ msgid "Exporting tables in the database \"%s\""
 msgstr "Sto esportando le tabelle nel database \"%s\""
 
 #: libraries/display_export.lib.php:91
-#, fuzzy, php-format
+#, php-format
 #| msgid "Create table on database %s"
 msgid "Exporting rows in the table \"%s\""
-msgstr "Crea una nuova tabella nel database %s"
+msgstr "Sto esportando le colonne nella tabella \"%s\""
 
 #: libraries/display_export.lib.php:97
 #, fuzzy
