--- a/po/it.po
+++ b/po/it.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-22 19:31+0200\n"
+"PO-Revision-Date: 2010-08-22 19:32+0200\n"
 "Last-Translator:  <rebeluca@gmail.com>\n"
 "Language-Team: italian <it@li.org>\n"
 "Language: it\n"
@@ -2059,10 +2059,9 @@ msgid "Exporting rows in the table \"%s\""
 msgstr "Sto esportando le colonne nella tabella \"%s\""
 
 #: libraries/display_export.lib.php:97
-#, fuzzy
 #| msgid "Export type"
 msgid "Export Method:"
-msgstr "Tipo di esportazione"
+msgstr "Metodo di esportazione:"
 
 #: libraries/display_export.lib.php:113
 msgid "Quick - display only the minimal options to configure"
