Translation update done using Pootle.

--- a/po/it.po
+++ b/po/it.po
@@ -2077,10 +2077,9 @@ msgid "Database(s):"
 msgstr "Database"
 
 #: libraries/display_export.lib.php:139
-#, fuzzy
 #| msgid "Tables"
 msgid "Table(s):"
-msgstr "Tabelle"
+msgstr "Tabelle:"
 
 #: libraries/display_export.lib.php:149
 #, fuzzy
