--- a/po/it.po
+++ b/po/it.po
@@ -98,7 +98,7 @@ msgstr ""
 #: bs_disp_as_mime_type.php:35
 #| msgid "Failed to write file to disk."
 msgid "Failed to fetch headers"
-msgstr "Non riesco a scrivere il file su disco."
+msgstr "Non sono riuscito a leggere le intestazioni"
 
 #: bs_disp_as_mime_type.php:41
 msgid "Failed to open remote URL"
