--- a/po/it.po
+++ b/po/it.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-22 19:37+0200\n"
+"PO-Revision-Date: 2010-08-22 19:38+0200\n"
 "Last-Translator:  <rebeluca@gmail.com>\n"
 "Language-Team: italian <it@li.org>\n"
 "Language: it\n"
@@ -8791,7 +8791,7 @@ msgstr "Attiva il tracking per %s.%s"
 
 #: tbl_tracking.php:649
 msgid "Activate now"
-msgstr ""
+msgstr "Attiva ora"
 
 #: tbl_tracking.php:662
 #, php-format
