--- a/po/it.po
+++ b/po/it.po
@@ -8796,7 +8796,7 @@ msgstr "Attiva ora"
 #: tbl_tracking.php:662
 #, php-format
 msgid "Create version %s of %s.%s"
-msgstr ""
+msgstr "Crea versione %s di %s.%s"
 
 #: tbl_tracking.php:666
 msgid "Track these data definition statements:"
