--- a/po/it.po
+++ b/po/it.po
@@ -8807,9 +8807,8 @@ msgid "Track these data manipulation statements:"
 msgstr ""
 
 #: tbl_tracking.php:682
-#, fuzzy
 msgid "Create version"
-msgstr "Crea relazioni"
+msgstr "Crea versione"
 
 #: themes.php:31
 #, php-format
