--- a/po/it.po
+++ b/po/it.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-22 19:38+0200\n"
+"PO-Revision-Date: 2010-08-22 19:39+0200\n"
 "Last-Translator:  <rebeluca@gmail.com>\n"
 "Language-Team: italian <it@li.org>\n"
 "Language: it\n"
@@ -8821,7 +8821,7 @@ msgstr ""
 
 #: themes.php:41
 msgid "Get more themes!"
-msgstr "Ottieni altri temi!"
+msgstr "Scarica altri temi!"
 
 #: transformation_overview.php:24
 msgid "Available MIME types"
