Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-22 19:49+0200\n"
+"PO-Revision-Date: 2010-08-22 19:51+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -767,7 +767,6 @@ msgid "Values for the column \"%s\""
 msgstr "\"%s\" sütunu için değerler"
 
 #: enum_editor.php:22
-#, fuzzy
 #| msgid ""
 #| "Please enter the values for transformation options using this format: "
 #| "'a', 100, b,'c'...<br />If you ever need to put a backslash (\"\\\") or a "
@@ -778,10 +777,9 @@ msgid ""
 "need to put a backslash (\"\\\") or a single quote (\"'\") amongst those "
 "values, precede it with a backslash (for example '\\\\xyz' or 'a\\'b')."
 msgstr ""
-"Lütfen dönüşüm seçenekleri için değerleri bu biçimi kullanarak giriniz: 'a', "
-"100, b,'c'...<br />Eğer bu değerler arasına hep ters eğik çizgi (\"\\\") "
-"veya tek tırnak (\"'\") koymanız gerekirse, önlerine ters eğik çizgi koyun "
-"(örneğin '\\\\xyz' veya 'a\\'b')."
+"Her bir değeri ayrı alana girin, tek tırnakla kapatın. Eğer bu değerler "
+"arasına hep ters eğik çizgi (\"\\\") veya tek tırnak (\"'\") koymanız gerekirse, "
+"önlerine ters eğik çizgi koyun (örneğin '\\\\xyz' veya 'a\\'b')."
 
 #: export.php:73
 msgid "Selected export type has to be saved in file!"
