--- a/po/tr.po
+++ b/po/tr.po
@@ -2021,10 +2021,10 @@ msgid "Exporting tables in the database \"%s\""
 msgstr "\"%s\" veritabanında tablolar dışa aktarılıyor"
 
 #: libraries/display_export.lib.php:91
-#, fuzzy, php-format
+#, php-format
 #| msgid "Create table on database %s"
 msgid "Exporting rows in the table \"%s\""
-msgstr "%s veritabanında yeni tablo oluştur"
+msgstr "\"%s\" tablosunda satırlar dışa aktarılıyor"
 
 #: libraries/display_export.lib.php:97
 #, fuzzy
