--- a/po/tr.po
+++ b/po/tr.po
@@ -2040,10 +2040,9 @@ msgid "Custom - display all possible options to configure"
 msgstr "Özel - yapılandırmak için tüm olası seçenekleri göster"
 
 #: libraries/display_export.lib.php:137
-#, fuzzy
 #| msgid "Databases"
 msgid "Database(s):"
-msgstr "Veritabanları"
+msgstr "Veritabanı(ları):"
 
 #: libraries/display_export.lib.php:139
 #, fuzzy
