Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -2060,10 +2060,9 @@ msgid "Dump some row(s)"
 msgstr "Tüm satırı(ları) dökümle"
 
 #: libraries/display_export.lib.php:159
-#, fuzzy
 #| msgid "Number of columns"
 msgid "Number of rows:"
-msgstr "Sütun sayısı"
+msgstr "Satır sayısı:"
 
 #: libraries/display_export.lib.php:162
 msgid "Row to begin at:"
