Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -2146,10 +2146,9 @@ msgid "None"
 msgstr "Hiçbiri"
 
 #: libraries/display_export.lib.php:322
-#, fuzzy
 #| msgid "\"zipped\""
 msgid "zipped"
-msgstr "\"zip olarak\""
+msgstr "zip olarak"
 
 #: libraries/display_export.lib.php:324
 #, fuzzy
