Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -2162,10 +2162,9 @@ msgstr "bzip olarak"
 
 #: libraries/display_export.lib.php:340 libraries/display_import.lib.php:244
 #: libraries/export/codegen.php:37
-#, fuzzy
 #| msgid "Format"
 msgid "Format:"
-msgstr "Biçim"
+msgstr "Biçim:"
 
 #: libraries/display_export.lib.php:345 libraries/display_import.lib.php:250
 msgid "Format-Specific Options:"
