--- a/po/tr.po
+++ b/po/tr.po
@@ -2171,10 +2171,9 @@ msgid "Format-Specific Options:"
 msgstr "Biçim-Belirli Seçenekler:"
 
 #: libraries/display_export.lib.php:354 libraries/display_import.lib.php:260
-#, fuzzy
 #| msgid "Encoding conversion"
 msgid "Encoding Conversion:"
-msgstr "Şifreleme dönüştürme"
+msgstr "Kodlama Dönüştürme:"
 
 #: libraries/display_export.lib.php:360
 msgid "SQL compatibility mode"
