--- a/po/tr.po
+++ b/po/tr.po
@@ -2207,10 +2207,10 @@ msgid "Importing into the current server"
 msgstr "Şu anki sunucu içine aktarılıyor"
 
 #: libraries/display_import.lib.php:131
-#, fuzzy, php-format
+#, php-format
 #| msgid "Jump to database"
 msgid "Importing into the database \"%s\""
-msgstr "Veritabanına git"
+msgstr "\"%s\" veritabanı içine aktarılıyor"
 
 #: libraries/display_import.lib.php:133
 #, fuzzy, php-format
