--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-08-19 14:18+0200\n"
-"PO-Revision-Date: 2010-08-22 20:10+0200\n"
+"PO-Revision-Date: 2010-08-22 20:11+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -2899,10 +2899,9 @@ msgid "Columns enclosed with:"
 msgstr "Sütunlar şununla kapatılmış:"
 
 #: libraries/export/csv.php:23 libraries/import/csv.php:29
-#, fuzzy
 #| msgid "Columns escaped by"
 msgid "Columns escaped with:"
-msgstr "Sütunu dolduran:"
+msgstr "Sütunlar şununla atlatılmış:"
 
 #: libraries/export/csv.php:24 libraries/import/csv.php:30
 #, fuzzy
