--- a/po/tr.po
+++ b/po/tr.po
@@ -2912,10 +2912,9 @@ msgstr "Satırlar şununla sonlandırılmış:"
 #: libraries/export/htmlword.php:28 libraries/export/latex.php:79
 #: libraries/export/ods.php:23 libraries/export/odt.php:59
 #: libraries/export/xls.php:23 libraries/export/xlsx.php:23
-#, fuzzy
 #| msgid "Replace NULL by"
 msgid "Replace NULL with:"
-msgstr "NULL'u bunla değiştir:"
+msgstr "NULL'u şununla değiştir:"
 
 #: libraries/export/csv.php:26 libraries/export/excel.php:23
 #, fuzzy
