--- a/po/tr.po
+++ b/po/tr.po
@@ -3032,10 +3032,9 @@ msgid "Display foreign key relationships"
 msgstr "Dış anahtar ilişkilerini göster"
 
 #: libraries/export/latex.php:59 libraries/export/odt.php:45
-#, fuzzy
 #| msgid "Displaying Column Comments"
 msgid "Display comments"
-msgstr "Sütun Yorumları gösteriliyor"
+msgstr "Yorumları göster"
 
 #: libraries/export/latex.php:62 libraries/export/odt.php:48
 #: libraries/export/sql.php:44
